--- a/src/main/resources/com/example/helloworldfx/hello-view.fxml
+++ b/src/main/resources/com/example/helloworldfx/hello-view.fxml
@@ -5,12 +5,18 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.helloworldfx.HelloController">
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.text.Font?>
+<GridPane alignment="CENTER" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml"
+          fx:controller="com.example.helloworldfx.HelloController">
   <padding>
     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
   </padding>
 
-  <Label fx:id="welcomeText"/>
-  <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+  <Label fx:id="welcomeText" text="Welcome to JavaFX" textFill="green">
+    <font>
+      <Font name="Times New Roman" size="70" />
+    </font>
+  </Label>
+<!--  <Button text="Hello!" onAction="#onHelloButtonClick"/>-->
+</GridPane>
