--- a/src/main/resources/com/example/helloworldfx/hello-view.fxml
+++ b/src/main/resources/com/example/helloworldfx/hello-view.fxml
@@ -7,16 +7,107 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.text.Font?>
-<GridPane alignment="CENTER" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml"
-          fx:controller="com.example.helloworldfx.HelloController">
-  <padding>
-    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-  </padding>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.BorderPane?>
 
-  <Label fx:id="welcomeText" text="Welcome to JavaFX" textFill="green">
-    <font>
-      <Font name="Times New Roman" size="70" />
-    </font>
-  </Label>
-<!--  <Button text="Hello!" onAction="#onHelloButtonClick"/>-->
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.TilePane?>
+
+
+<?import javafx.scene.layout.StackPane?>
+
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
+<GridPane fx:controller="com.example.helloworldfx.HelloController"
+          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+    <Button GridPane.rowIndex="0" GridPane.columnIndex="0" text="Click me">
+        <graphic>
+            <ImageView>
+                <Image url="@/toolbarButtonGraphics/general/TipOfTheDay24.gif" />
+            </ImageView>
+        </graphic>
+    </Button>
+    <Label GridPane.rowIndex="0" GridPane.columnIndex="1" text="This is a label">
+        <graphic>
+            <ImageView>
+                <Image url="@/toolbarButtonGraphics/general/Information24.gif" />
+            </ImageView>
+        </graphic>
+    </Label>
 </GridPane>
+
+        <!--<StackPane fx:controller="com.example.helloworldfx.HelloController"-->
+<!--           xmlns:fx="http://javafx.com/fxml" >-->
+<!--    <Label text="The label text" style="-fx-background-color: green" />-->
+<!--    <Button text="Button One" style="-fx-background-color: red" />-->
+<!--    <Label text="The second label text" style="-fx-background-color: blue" />-->
+
+
+<!--</StackPane>-->
+
+<!--<TilePane fx:controller="com.example.helloworldfx.HelloController"-->
+<!--          xmlns:fx="http://javafx.com/fxml" >-->
+<!--    <Button text="Button One" />-->
+<!--    <Button text="Button Two" />-->
+<!--    <Button text="Button Three" />-->
+<!--    <Button text="Button Four" />-->
+<!--    <Button text="Button Five" />-->
+<!--    <Button text="Button Six" />-->
+<!--    <Button text="Button Seven" />-->
+<!--    <Button text="Button Eight" />-->
+<!--    <Button text="Button Nine" />-->
+<!--    <Button text="Button Ten" />-->
+
+
+<!--</TilePane>-->
+
+        <!--<BorderPane fx:controller="com.example.helloworldfx.HelloController"-->
+        <!--            xmlns:fx="http://javafx.com/fxml">-->
+        <!--    <top>-->
+        <!--        <Label text="This label is in the top position" alignment="center"-->
+        <!--               BorderPane.alignment="center"-->
+        <!--        style="-fx-border-color: blue; -fx-border-width: 3; -fx-border-style: dashed" />-->
+        <!--    </top>-->
+        <!--    <center>-->
+        <!--        <Label text="This label is in the center position and has really loooooooooooooooooooong text" />-->
+        <!--    </center>-->
+        <!--    <left>-->
+        <!--        <Label text="This label is in the left position" alignment="center" />-->
+        <!--    </left>-->
+        <!--    <right>-->
+        <!--        <Label text="This label is in the right position" />-->
+        <!--    </right>-->
+        <!--    <bottom>-->
+        <!--        <HBox spacing="10" alignment="bottom_right">-->
+        <!--            <padding>-->
+        <!--                <Insets bottom="10" right="10" />-->
+        <!--            </padding>-->
+        <!--            &lt;!&ndash;    <padding>&ndash;&gt;-->
+        <!--            &lt;!&ndash;      <Insets bottom="10.0" right="10.0"/>&ndash;&gt;-->
+        <!--            &lt;!&ndash;    </padding>&ndash;&gt;-->
+        <!--            <Button text="Okay" prefWidth="90"/>-->
+        <!--            <Button text="Cancel" prefWidth="90"/>-->
+        <!--            <Button text="Help" prefWidth="90"/>-->
+
+        <!--            &lt;!&ndash;  <Label fx:id="welcomeText" text="Welcome to JavaFX" textFill="green">&ndash;&gt;-->
+        <!--            &lt;!&ndash;    <font>&ndash;&gt;-->
+        <!--            &lt;!&ndash;      <Font name="Times New Roman" size="70" />&ndash;&gt;-->
+        <!--            &lt;!&ndash;    </font>&ndash;&gt;-->
+        <!--            &lt;!&ndash;  </Label>&ndash;&gt;-->
+
+        <!--            &lt;!&ndash;  can be used to set column widths&ndash;&gt;-->
+        <!--            &lt;!&ndash;  <columnConstraints>&ndash;&gt;-->
+        <!--            &lt;!&ndash;    <ColumnConstraints percentWidth="50.0" />&ndash;&gt;-->
+        <!--            &lt;!&ndash;    <ColumnConstraints percentWidth="50.0" />&ndash;&gt;-->
+        <!--            &lt;!&ndash;  </columnConstraints>&ndash;&gt;-->
+
+        <!--            &lt;!&ndash;  <Button text="Button One" GridPane.rowIndex="0" GridPane.columnIndex="0" GridPane.halignment="RIGHT" />&ndash;&gt;-->
+        <!--            &lt;!&ndash;  <Button text="Button Two" GridPane.rowIndex="0" GridPane.columnIndex="1" />&ndash;&gt;-->
+        <!--            &lt;!&ndash;  <Button text="Button Three" GridPane.rowIndex="1" GridPane.columnIndex="0" />&ndash;&gt;-->
+        <!--            &lt;!&ndash;  <Button text="Really Long Button Four" GridPane.rowIndex="3" GridPane.columnIndex="0"&ndash;&gt;-->
+        <!--            &lt;!&ndash;    GridPane.columnSpan="2" />&ndash;&gt;-->
+        <!--            &lt;!&ndash;  <Button text="Button Five" GridPane.rowIndex="2" GridPane.columnIndex="0" />&ndash;&gt;-->
+        <!--        </HBox>-->
+        <!--    </bottom>-->
+        <!--</BorderPane>-->
