--- a/src/main/resources/com/example/helloworldfx/hello-view.fxml
+++ b/src/main/resources/com/example/helloworldfx/hello-view.fxml
@@ -30,6 +30,10 @@
 <?import java.lang.String?>
 
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.ColorPicker?>
+<?import javafx.scene.control.DatePicker?>
 <GridPane fx:controller="com.example.helloworldfx.HelloController"
           xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
     <Button GridPane.rowIndex="0" GridPane.columnIndex="0" text="Click me">
@@ -73,11 +77,11 @@
     <ComboBox GridPane.rowIndex="1" GridPane.columnIndex="2" GridPane.columnSpan="2">
         <items>
             <FXCollections fx:factory="observableArrayList">
-                <String fx:value="This is Option 1" />
-                <String fx:value="This is Option 2" />
-                <String fx:value="This is Option 3" />
-                <String fx:value="This is Option 4" />
-                <String fx:value="This is Option 5" />
+                <String fx:value="Option 1" />
+                <String fx:value="Option 2" />
+                <String fx:value="Option 3" />
+                <String fx:value="Option 4" />
+                <String fx:value="Option 5" />
             </FXCollections>
         </items>
         <value>
@@ -95,6 +99,13 @@
             </FXCollections>
         </items>
     </ChoiceBox>
+    <Slider GridPane.rowIndex="2" GridPane.columnIndex="0" GridPane.columnSpan="4" min="0" max="100"
+            showTickLabels="true" showTickMarks="true" minorTickCount="4" snapToTicks="true"/>
+    <Spinner GridPane.rowIndex="2" GridPane.columnIndex="4" min="0" max="100" initialValue="50"
+             editable="true"/>
+    <ColorPicker GridPane.rowIndex="3" GridPane.columnIndex="0"/>
+    <DatePicker GridPane.rowIndex="3" GridPane.columnIndex="1"/>
+
 </GridPane>
 
         <!--<StackPane fx:controller="com.example.helloworldfx.HelloController"-->
