--- a/src/main/resources/com/example/helloworldfx/hello-view.fxml
+++ b/src/main/resources/com/example/helloworldfx/hello-view.fxml
@@ -38,13 +38,14 @@
 <?import javafx.scene.control.Accordion?>
 <GridPane fx:controller="com.example.helloworldfx.HelloController"
           xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-    <Button GridPane.rowIndex="0" GridPane.columnIndex="0" text="Click me">
+    <Button GridPane.rowIndex="0" GridPane.columnIndex="0" text="Button">
         <graphic>
             <ImageView>
                 <Image url="@/toolbarButtonGraphics/general/TipOfTheDay24.gif"/>
             </ImageView>
         </graphic>
     </Button>
+
     <Label GridPane.rowIndex="0" GridPane.columnIndex="1" text="This is a label"
            textFill="blue" WrapText="true">
         <font>
@@ -123,6 +124,9 @@
         </panes>
 
     </Accordion>
+    <TextField fx:id="nameField" GridPane.rowIndex="4" GridPane.columnIndex="0" onKeyReleased="#handleKeyReleased"/>
+    <Button fx:id="helloButton" GridPane.rowIndex="5" GridPane.columnIndex="0" text="Say Hello" onAction="#onButtonClick" />
+    <Button fx:id="byeButton" GridPane.rowIndex="5" GridPane.columnIndex="1" text="Say Bye" onAction="#onButtonClick" />
 
 </GridPane>
 
